# tcs

./: .gitignore  README.md  core.py  note.txt  pyproject.toml  test_branching.py  test_merge.py  test_tiny_control_system.py  utils.py
myrepo/.tcs/: config.json
src/: core.py
src/tcs/: __init__.py  cli.py  main.py
src/tcs/core/: branch.py  checkout.py  commit.py  config.py  core.py  diff.py  index.py  merge.py  repository.py  status.py
tests/: test_branching.py  test_core.py  test_merge.py
tests/core/: conftest.py  test_branch.py  test_branching.py  test_commit.py  test_config.py  test_core.py  test_diff.py  test_index.py  test_merge.py  test_repository.py  test_status.py  test_utils.py
